Added Websocketpp library using standard libraries instead of boost

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,11 +10,22 @@
             "args": [
                 "-g",
                 "${file}",
+                "-D",
+                "ASIO_STANDALONE",
+                "-D",
+                "_WEBSOCKETPP_CPP11_THREAD_",
+                "-D",
+                "ASIO_HAS_SECURE_RTL",
                 "-I",
                 "C:\\MSFS SDK\\SimConnect SDK\\include",
+                "-I",
+                "${workspaceFolder}/websocketpp",
                 "-L",
                 "C:\\MSFS SDK\\SimConnect SDK\\lib",
                 "-lSimConnect",
+                "-lwsock32",
+                "-lWs2_32",
+                "-static",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
